--- a/CapSpotNuevo/CSS/estilo.css
+++ b/CapSpotNuevo/CSS/estilo.css
@@ -663,7 +663,7 @@ body, html {
   border-radius: 50%;
   padding: 5px 10px;
   font-size: 14px;
-  position: absolute;
+  position: relative;
   right: 40px;
   box-shadow: 0 0 8px rgba(0,0,0,0.5);
   font-weight: bold;
