--- a/CapSpotNuevo/CSS/estilocatalogo.css
+++ b/CapSpotNuevo/CSS/estilocatalogo.css
@@ -9,6 +9,13 @@
   padding: 10px 0;
 }
 
+.Carrito{
+  filter: invert(100);
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
 .barra-contenido {
   max-width: 1200px;
   margin: 0 auto;
@@ -103,14 +110,9 @@ html, body {
 .Promociones{
     position: relative;
     height: 644px;
+    overflow: visible;
 }
 
-.Carrito{
-  filter: invert(100);
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
 
 .Logo-flotante {
     position: absolute;
@@ -153,31 +155,32 @@ html, body {
   z-index: 2;
 }
 
+.group {
+  position: relative;
+  height: 400px; 
+  width: 100%;
+
+}
+
 .podio {
   position: absolute;
-  left: 40%;
-  bottom: 77px;
-  transform: translate(-50%, -50%);
+  left: 43%;
+  bottom: 243px;
+  transform: translateX(-50% + 100px);
   width: auto; 
-  height:auto;
+  height: auto;
   z-index: 3;
   filter: blur(1px);
 }
 
 .gorra.knicks {
-  position: relative;
-  left: 36.8%;
-  bottom: 175px;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  left: 40.5%;
+  bottom: 323px;
+  transform: translateX(calc(-50% + 100px)); 
   width: 440.42px;
   height: 420px; 
-  z-index: 3;
-}
-.group{
-    position: relative;
-    height: 400px;
-    width: 100%;
-    bottom: 165px;
+  z-index: 4;
 }
 .Promociones p {
   position: absolute;
@@ -276,12 +279,12 @@ html, body {
   transition: transform 0.3s ease;
 }
 
-.Catalogo-gorras {
-  padding: 40px 10%;
-  background: #f5f5f7;
-  font-family: 'Oswald', sans-serif;
-  color: #1a1a1a;
-}
+  .Catalogo-gorras {
+    padding: 40px 10%;
+    background: #f5f5f7;
+    font-family: 'Oswald', sans-serif;
+    color: #1a1a1a;
+  }
 
 .titulo-catalogo{
   padding-bottom: 20px;
